<resources>
    <string name="app_name">微信</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="action_group_chat">添加群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_feedback">意见反馈</string>
</resources>
