<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_search"
        android:icon="@mipmap/actionbar_search_icon"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView"

        />
    <item
        android:title="@string/action_add"
        android:id="@+id/action_add"
        android:icon="@mipmap/actionbar_add_icon"
        />
    <item
        android:title="@string/action_group_chat"
        android:id="@+id/action_group_chat"
        android:icon="@mipmap/menu_group_chat_icon"
        />

    <item
        android:title="@string/menu_addfriend"
        android:id="@+id/action_add_friend"
        android:icon="@mipmap/menu_add_icon"
        />

    <item
        android:title="@string/menu_scan"
        android:id="@+id/action_menu_scan"
        android:icon="@mipmap/men_scan_icon"
        />

    <item
        android:title="@string/menu_feedback"
        android:id="@+id/action_feedback"
        android:icon="@mipmap/menu_feedback_icon"
        />

</menu>
